# Tareapython

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DETENER LABORATORIO.bat  Dockerfile  Dockerfile.backend  LICENSE  Makefile  PENDIENTES.md  PENDIENTES2.md  PENDIENTES3.md  PENDIENTES4.md  README.md  REVISION_SISTEMA.md  SPEC-stock-vencimientos.md  SPECS.md  TODO.md  analisis-mejoras-2026-06-05.md  check_parens.js  compose.yaml  crear-accesos-directos.bat  crear-accesos-directos.ps1  detener.ps1  detener.sh  docker-compose.yml  dockerfile  fix_grids.py  iniciar-laboratorio.bat  iniciar.ps1  iniciar.sh  mejoras vicente.md  package-lock.json  render.yaml  reporte_analisis.md  reporte_analisis_competitivo.md  seed_demo.sql
backend/: .env.example  Cargo.toml  build_err.txt  build_output.txt
backend/.cargo/: config.toml
backend/.sqlx/: query-186735b1743c207959b35068b2d92422b835d856450210fea60e4cf2c30fdf96.json  query-3e091fcf4ff4e4476095c676edcbf0948da769a5a72c7900b595e0be21130c5e.json  query-5500df07f71d53114895eb46fa9decbd03220de2e454c5b51710bc591d5ae52d.json  query-5fd0da64543fd311f13d5cc178aec7b6ea96ea414e0c1b3cf23f42c7d2a76e46.json  query-65998fc39b1120c09831554f8e6dd9a3ce774596b233e217bb497d5dd0ec2953.json  query-804e8952ddaac219869dd7cd66f03ea1dd81be75417051805ec6b8783076359f.json  query-839a881fb33f67a5b68807c0933f373e48f4eb215225e926a0e09603a1802e1d.json  query-87a57b503a8c7b9b7edb615c56eeb384ea38ef9bdd96bdbdf5ed9b95923dbfdf.json  query-a595530a59eaaa94b9784e39b013aa87ab8457507459385cc49d232bbfd9af4b.json  query-b1e3df68324684bd14ed2c8a277d8cffc3fbd7c3b7d4c95ee16adcef34b0b3cf.json  query-b36ab48d8c6b2e214454fc38373826b22a1707d92e9ca0c3c5b4fffa7afec017.json  query-b44d9914821c9abbbf5866cac97252a0a236cb98b04ca4b01444b71ec6989487.json
backend/migrations/: 001_initial_schema.sql  002_add_deleted_at_to_usuarios.sql  002_estado_stock_dos_ejes.sql  002_seed_data.sql  003_add_whatsapp_integration.sql  003_rename_numero_guia.sql  004_control_lote.sql  004_normalizacion_lotes_uom.sql  004_unidad_plural.sql  005_double_entry_stock.sql  006_gtin_par_levels.sql  007_estado_vencimiento_no_aplica.sql  007_flatten_producto_proveedor.sql  007_producto_proveedor.sql  008_producto_codigos_barras.sql  009_catalogacion_gtin_mejoras.sql  009_stock_estado_engine.sql  010_rediseño_arquitectura.sql  011_stock_snapshot_trigger.sql  012_alerta_vencimiento_notificaciones.sql  014_sesiones_conteo.sql  018_img_paths.sql  020_solicitud_aprobacion.sql  023_more_versions.sql  029_solicitud_precio_presentacion.sql  033_imagen_productos.sql  034_ubicacion_producto.sql  037_solicitud_items_reconciliar.sql  042_drop_solicitud_items.sql  (+15 more)
(+3176 files in other folders)
